@@ -415,6 +415,7 @@ OCSP_CERTID *OCSP_cert_id_new(const EVP_MD *dgst,
 OCSP_ONEREQ *OCSP_request_add0_id(OCSP_REQUEST *req, OCSP_CERTID *cid);
 
 int OCSP_request_add1_nonce(OCSP_REQUEST *req, unsigned char *val, int len);
+int OCSP_basic_add1_nonce(OCSP_BASICRESP *resp, unsigned char *val, int len);
 int OCSP_check_nonce(OCSP_REQUEST *req, OCSP_BASICRESP *bs);
 int OCSP_copy_nonce(OCSP_BASICRESP *resp, OCSP_REQUEST *req);
 
@@ -557,63 +558,43 @@ void ERR_load_OCSP_strings(void);
 /* Error codes for the OCSP functions. */
 
 /* Function codes. */
-#define OCSP_F_ASN1_STRING_ENCODE			 106
-#define OCSP_F_BASIC_RESPONSE_NEW			 100
-#define OCSP_F_BASIC_RESPONSE_VERIFY			 101
-#define OCSP_F_CERT_ID_NEW				 102
-#define OCSP_F_CERT_STATUS_NEW				 103
-#define OCSP_F_D2I_OCSP_NONCE				 109
-#define OCSP_F_OCSP_BASIC_ADD1_STATUS			 118
-#define OCSP_F_OCSP_BASIC_SIGN				 119
-#define OCSP_F_OCSP_BASIC_VERIFY			 113
-#define OCSP_F_OCSP_CHECK_DELEGATED			 117
-#define OCSP_F_OCSP_CHECK_IDS				 114
-#define OCSP_F_OCSP_CHECK_ISSUER			 115
-#define OCSP_F_OCSP_CHECK_NONCE				 112
-#define OCSP_F_OCSP_MATCH_ISSUERID			 116
-#define OCSP_F_OCSP_REQUEST_SIGN			 120
+#define OCSP_F_ASN1_STRING_ENCODE			 100
+#define OCSP_F_CERT_ID_NEW				 101
+#define OCSP_F_D2I_OCSP_NONCE				 102
+#define OCSP_F_OCSP_BASIC_ADD1_STATUS			 103
+#define OCSP_F_OCSP_BASIC_SIGN				 104
+#define OCSP_F_OCSP_BASIC_VERIFY			 105
+#define OCSP_F_OCSP_CHECK_DELEGATED			 106
+#define OCSP_F_OCSP_CHECK_IDS				 107
+#define OCSP_F_OCSP_CHECK_ISSUER			 108
+#define OCSP_F_OCSP_MATCH_ISSUERID			 109
+#define OCSP_F_OCSP_REQUEST_SIGN			 110
 #define OCSP_F_OCSP_RESPONSE_GET1_BASIC			 111
-#define OCSP_F_OCSP_SENDREQ_BIO				 110
-#define OCSP_F_REQUEST_VERIFY				 104
-#define OCSP_F_RESPONSE_VERIFY				 105
-#define OCSP_F_S2I_OCSP_NONCE				 107
-#define OCSP_F_V2I_OCSP_CRLID				 108
+#define OCSP_F_OCSP_SENDREQ_BIO				 112
+#define OCSP_F_REQUEST_VERIFY				 113
 
 /* Reason codes. */
-#define OCSP_R_BAD_DATA					 108
-#define OCSP_R_BAD_TAG					 100
-#define OCSP_R_CERTIFICATE_VERIFY_ERROR			 126
-#define OCSP_R_DIGEST_ERR				 101
-#define OCSP_R_FAILED_TO_OPEN				 109
-#define OCSP_R_FAILED_TO_READ				 110
-#define OCSP_R_FAILED_TO_STAT				 111
-#define OCSP_R_MISSING_OCSPSIGNING_USAGE		 131
-#define OCSP_R_MISSING_VALUE				 112
-#define OCSP_R_NONCE_MISSING_IN_RESPONSE		 121
-#define OCSP_R_NONCE_VALUE_MISMATCH			 122
-#define OCSP_R_NOT_BASIC_RESPONSE			 120
-#define OCSP_R_NO_CERTIFICATE				 102
-#define OCSP_R_NO_CERTIFICATES_IN_CHAIN			 128
-#define OCSP_R_NO_CONTENT				 115
-#define OCSP_R_NO_PUBLIC_KEY				 103
-#define OCSP_R_NO_RESPONSE_DATA				 104
-#define OCSP_R_NO_REVOKED_TIME				 132
-#define OCSP_R_NO_SIGNATURE				 105
-#define OCSP_R_PRIVATE_KEY_DOES_NOT_MATCH_CERTIFICATE	 133
-#define OCSP_R_RESPONSE_CONTAINS_NO_REVOCATION_DATA	 129
-#define OCSP_R_REVOKED_NO_TIME				 106
-#define OCSP_R_ROOT_CA_NOT_TRUSTED			 127
-#define OCSP_R_SERVER_READ_ERROR			 116
-#define OCSP_R_SERVER_RESPONSE_ERROR			 117
-#define OCSP_R_SERVER_RESPONSE_PARSE_ERROR		 118
-#define OCSP_R_SERVER_WRITE_ERROR			 119
-#define OCSP_R_SIGNATURE_FAILURE			 124
-#define OCSP_R_SIGNER_CERTIFICATE_NOT_FOUND		 125
-#define OCSP_R_UNEXPECTED_NONCE_IN_RESPONSE		 123
-#define OCSP_R_UNKNOWN_MESSAGE_DIGEST			 130
-#define OCSP_R_UNKNOWN_NID				 107
-#define OCSP_R_UNSUPPORTED_OPTION			 113
-#define OCSP_R_VALUE_ALREADY				 114
+#define OCSP_R_BAD_DATA					 100
+#define OCSP_R_CERTIFICATE_VERIFY_ERROR			 101
+#define OCSP_R_DIGEST_ERR				 102
+#define OCSP_R_MISSING_OCSPSIGNING_USAGE		 103
+#define OCSP_R_NOT_BASIC_RESPONSE			 104
+#define OCSP_R_NO_CERTIFICATES_IN_CHAIN			 105
+#define OCSP_R_NO_CONTENT				 106
+#define OCSP_R_NO_PUBLIC_KEY				 107
+#define OCSP_R_NO_RESPONSE_DATA				 108
+#define OCSP_R_NO_REVOKED_TIME				 109
+#define OCSP_R_PRIVATE_KEY_DOES_NOT_MATCH_CERTIFICATE	 110
+#define OCSP_R_RESPONSE_CONTAINS_NO_REVOCATION_DATA	 111
+#define OCSP_R_ROOT_CA_NOT_TRUSTED			 112
+#define OCSP_R_SERVER_READ_ERROR			 113
+#define OCSP_R_SERVER_RESPONSE_ERROR			 114
+#define OCSP_R_SERVER_RESPONSE_PARSE_ERROR		 115
+#define OCSP_R_SERVER_WRITE_ERROR			 116
+#define OCSP_R_SIGNATURE_FAILURE			 117
+#define OCSP_R_SIGNER_CERTIFICATE_NOT_FOUND		 118
+#define OCSP_R_UNKNOWN_MESSAGE_DIGEST			 119
+#define OCSP_R_UNKNOWN_NID				 120
 
 #ifdef  __cplusplus
 }
